--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
 	<title>burgers</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="/assets/css/burger_style.css">
+	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/assets/js/assets.js"></script>
 </head>
 <body>
